; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_path.c_svn_path_resolve_repos_relative_url.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_path.c_svn_path_resolve_repos_relative_url.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SVN_ERR_BAD_URL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Improper relative URL '%s'\00", align 1
@SVN_VA_NULL = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_path_resolve_repos_relative_url(i8** %0, i8* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  store i8** %0, i8*** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i32 @svn_path_is_repos_relative_url(i8* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %18, label %13

13:                                               ; preds = %4
  %14 = load i32, i32* @SVN_ERR_BAD_URL, align 4
  %15 = call i32 @_(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %16 = load i8*, i8** %7, align 8
  %17 = call i32* @svn_error_createf(i32 %14, i32* null, i32 %15, i8* %16)
  store i32* %17, i32** %5, align 8
  br label %27

18:                                               ; preds = %4
  %19 = load i32*, i32** %9, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = getelementptr inbounds i8, i8* %21, i64 1
  %23 = load i32, i32* @SVN_VA_NULL, align 4
  %24 = call i8* @apr_pstrcat(i32* %19, i8* %20, i8* %22, i32 %23)
  %25 = load i8**, i8*** %6, align 8
  store i8* %24, i8** %25, align 8
  %26 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %26, i32** %5, align 8
  br label %27

27:                                               ; preds = %18, %13
  %28 = load i32*, i32** %5, align 8
  ret i32* %28
}

declare dso_local i32 @svn_path_is_repos_relative_url(i8*) #1

declare dso_local i32* @svn_error_createf(i32, i32*, i32, i8*) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i8* @apr_pstrcat(i32*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
